Added Dasar mystery goo reports

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -102,7 +102,44 @@ Localization
 	#LOC_CH_Dasar_displayName = Dasar^N
 	#LOC_CH_Dasar_description = Dasar is the closet planet to Harmonia, so close that some pools of lava has formed, creating sharp edges and flat plains. The lack of craters shows an extremely young surface. It has orgininally been confused by a very dim brown dwarf due to emmiting a considerable amount of light.
 
-		
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore1 = There is quite a lot of perilous terrain all about us, excluding the glowing lakes of molten rock within walking distance. You think this is as close as you should get to them.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore2 = Setting up in such a location is certainly a daring idea. Best to make sure no equipment rolls into the lava below!	
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Lowlands1 = The terrain is much more uneven here as it leads towards the basin. You hope the volcanic activity doesn't cause a huge fissure to open up and sawallow the craft.	
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Lowlands2 = Although the glimmering rocks around the craft are much more interesting than at higher altitudes, they're probably much too hot to be picked up beside a quick surface sample.	
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Flatplains1 = Thankfully, this region of the planet seems to be the safest. Let's hope it stays that way...
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Flatplains2 = Although these temperatures are as "cold" as they're going to get landed on this planet, its still swelteringly hot under this space suit!
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands1 = The ground is still quite stable here but some interesting formations and gradients are starting to appear.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands2 = The occasional tremor shakes the craft. Thankfully, there's still some distance between you and the hypnotic oceans of lava if something were to break.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1 = Umm... its a little bit hot.
+	#LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2 = Did we pack any radiators?
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1 = It's starting to get quite hot now. Let’s hope our equipment can handle it!
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2 = It's much easier to make out the bubbling details of the swirling lava amid the sooty landmasses now. Is that a good thing?
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh1 = The violently volcanic planet is so far below you, yet you can already feel the heat from up here.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh2 = From up here, it's difficult to take your eyes off Dasar's mesmerizing oceans of lava. Should we get closer?
+
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore1 = The goo seems to be a little unconfortable in this sweltering environment. Then again, the crew is quite uncomfortable as well.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore2 = The heat is getting unbearable for the goo. We should probably get out of here quickly!
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Lowlands1 = The goo seems to enjoy the warmth after so long in the frigid environment of space.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Lowlands2 = The soot from the ground gets on the canister windows, making it hard to peer inside and observe the goo. From what we can see, it seems to be shuffling around in it's canister
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Flatplains1 = The goo likes this better than other parts of Dasar. It isn't exactly cold here, but much better than the hot shores.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Flatplains2 = For a while, it almost seems like the goo is asleep. 
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Midlands1 = The landing was a bit rough, but the goo doesn't seem to care. It's probably endured so many hard landings that this does not disturb it.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Midlands2 = The goo seems to have taken a liking to some of the rocks here. When a scientist brought a rock close to the canister's windows, the goo moved around excitedly.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfSplashed1 = The goo canister is so hot that we cannot observe the goo inside anymore. The goo probably doesn't like it though!
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfSplashed2 = The goo canister doesn't have any thermal conditioning, so we probably should get out of here before the canister melts and the goo escapes!
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_LavaLakes1 = The goo canister is colder than if it were in lava, however it is still quite warm. The goo doesn't seem to like the intense heat radiating out from Dasar.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_LavaLakes2 = The goo shakes and writhes inside its canister. I think we should get out of here.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_HotShore1 = The goo seems to be ok, for now. Any closer and it might overheat.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_HotShore2 = The canister holding the goo back is getting quite warm. We can't be sure of the goo's temperature inside, however it's probably safe to assume that it does not like it.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Lowlands1 = The goo seems to enjoy looking down at the sooty surface of Dasar. Over here it's not quite as hot.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Lowlands2 = Flying near the soot obscures the canister, though not as much as landing. The goo tries to peer out of the windows. We should probably clean them.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Midlands1 = The goo really has taken a liking to these rocks. It keeps peering out and looking for more rocks.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Midlands2 = The goo doesn;t want to go away from this place. If we left it here it probably would have the time of it's life looking at these rocks.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_FlatPlains1 = The canister is cold to the touch. The goo definitely enjoys the slight warmth after months of interplanetary travel.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_FlatPlains2 = The goo seems to be sleeping, again! The scientists have been neglecting all other duties to stare at the goo.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh1 = The goo peers out at Dasar. I think it might enjoy the warmth down there.
+	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh2 = The canister is being slightly warmed by the heat radiating off from Dasar. The goo definitely enjoys the warmth! We might fit small heaters in the next revision of the canister for those long trips. 
+
 	// Defs for Eespeyeria:
 	#LOC_CH_Eespeyeria_displayName = Eespeyeria^N
 	#LOC_CH_Eespeyeria_description = Eespeyeria has a very dense atmopshere for a moon of this mass. Readings show a very eroded landscape with lakes of hydrocarbons.
