Added biome specific crew reports for Dasar

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -1,7 +1,7 @@
 // THIS FILE CONTAINS SPOILERS!!!
 // This file has science defines, which are more fun to read in KSP then in here
 
-// Localization written by DIY Labs
+// Localization written by DIY Labs and Jinxer
 
 Localization
 {
@@ -112,10 +112,16 @@ Localization
 	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands2 = The occasional tremor shakes the craft. Thankfully, there's still some distance between you and the hypnotic oceans of lava if something were to break.
 	#LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1 = Umm... its a little bit hot.
 	#LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2 = Did we pack any radiators?
-	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1 = It's starting to get quite hot now. Let’s hope our equipment can handle it!
-	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2 = It's much easier to make out the bubbling details of the swirling lava amid the sooty landmasses now. Is that a good thing?
-	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh1 = The violently volcanic planet is so far below you, yet you can already feel the heat from up here.
-	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh2 = From up here, it's difficult to take your eyes off Dasar's mesmerizing oceans of lava. Should we get closer?
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_LavaLakes1 = The gentle amber glow from the lava beneath you floods the capsule. It's a sight truly worth coming all this way for, but staring for too long makes your eyes start to water.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_LavaLakes2 = Watching the molten magma slowly twisting in the huge basins below you, it fills you with determination... and a little bit of concern as the heat hits the craft.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_HotShore1 = It's starting to get quite hot now. Let's hope our equipment can handle it!
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_HotShore2 = It's much easier to make out the bubbling details of the swirling lava amid the sooty landmasses now. Is that a good thing?
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Lowlands1 = Harsh cliffs and gradients appear to inhabit this part of the planet. Probably not the safest place to land.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Lowlands2 = In the distance, you notice a large boulder getting shook loose by the tectonic activity of the planet. It rolls closer to the lava lakes for a short while before getting stuck again in the temporary safety of the jagged terrain. You breathe a quick sigh of relief and return to the mission.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Midlands1 = A thick layer of dusty ash and loose sediment appears to cover this part of the ground. The craft might be able to land here but it may be risky.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Midlands2 = The terrain appears mostly flat, but the occasional cliff or mountain appears out of nowhere to disturb this theme.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Flatplains1 = Patches of smooth, brown basalt rock finally interrupt the jagged cliffs and layers of loose sediment. They're probably the best place to land.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Flatplains2 = From here, the terrain appears to be as calm as it's going to get. It's saddening that the safest place to land will likely avoid the beautiful view of the lava oceans.
 
 	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore1 = The goo seems to be a little unconfortable in this sweltering environment. Then again, the crew is quite uncomfortable as well.
 	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore2 = The heat is getting unbearable for the goo. We should probably get out of here quickly!
