Added locs for biome names
wow did this take a long time

--- a/configs/Aklarka.cfg
+++ b/configs/Aklarka.cfg
@@ -37,7 +37,7 @@
                 Value
                 {
                     name = Aklarka
-					displayName = Aklarka
+					displayName = #LOC_CH_Aklarka_biomeDisplayName_Aklarka
 					value = 1.0
 					color = #7682FF
                 }
