--- a/configs/Alia.cfg
+++ b/configs/Alia.cfg
@@ -37,63 +37,63 @@
                 Value
                 {
                     name = Ocean
-					displayName = Oceans
+					displayName = #LOC_CH_Alia_biomeDisplayName_Ocean
 					value = 1.0
 					color = #165280
                 }
                 Value
                 {
                     name = North Cap
-					displayName = North Cap
+					displayName = #LOC_CH_Alia_biomeDisplayName_NorthCap
 					value = 1.2
 					color = #4C6E71
                 }
                 Value
                 {
                     name = South Cap
-					displayName = South Cap
+					displayName = #LOC_CH_Alia_biomeDisplayName_SouthCap 
 					value = 1.2
 					color = #00D8EB
                 }
                 Value
                 {
                     name = Shores
-					displayName = Shores
+					displayName = #LOC_CH_Alia_biomeDisplayName_Shores
 					value = 1.0
 					color = #FBFF00
                 }
                 Value
                 {
                     name = Grasslands
-					displayName = Grasslands
+					displayName = #LOC_CH_Alia_biomeDisplayName_Grasslands
 					value = 1.0
 					color = #23FF05
                 }
                 Value
                 {
                     name = Peaks
-					displayName = Peaks
+					displayName = #LOC_CH_Alia_biomeDisplayName_Peaks
 					value = 2.0
 					color = #A4A4A4
                 }
                 Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Alia_biomeDisplayName_Highlands
 					value = 1.0
 					color = #7AB25E
                 }
                 Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Alia_biomeDisplayName_Midlands
 					value = 1.0
 					color = #268889
                 }
 				Value
                 {
-                    name = Cold OCean
-					displayName = Cold Ocean
+                    name = Cold Ocean
+					displayName = #LOC_CH_Alia_biomeDisplayName_ColdOcean
 					value = 1.0
 					color = #FFE99C
                 }
