--- a/configs/Beekos.cfg
+++ b/configs/Beekos.cfg
@@ -37,21 +37,21 @@
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Beekos_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #7A3C54
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Beekos_biomeDisplayName_Midlands
 					value = 1.0
 					color = #4B42D5
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Beekos_biomeDisplayName_Highlands
 					value = 1.0
 					color = #848204
                 }
