--- a/configs/Booopus.cfg
+++ b/configs/Booopus.cfg
@@ -38,42 +38,42 @@
 				Value
                 {
                     name = Mare Inferni
-					displayName = Mare inferni
+					displayName = #LOC_CH_Booopus_biomeDisplayName_MareInferni
 					value = 1.1
 					color = #1F2A7C
                 }
 				Value
                 {
                     name = Small plain
-					displayName = Small plain
+					displayName = #LOC_CH_Booopus_biomeDisplayName_SmallPlain
 					value = 1.1
 					color = #461F7C
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Booopus_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #309D02
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Booopus_biomeDisplayName_Midlands
 					value = 1.0
 					color = #9D3E02
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Booopus_biomeDisplayName_Highlands
 					value = 1.0
 					color = #63913E
                 }
 				Value
                 {
                     name = Bop crater
-					displayName = Bob crater
+					displayName = #LOC_CH_Booopus_biomeDisplayName_BobCrater
 					value = 1.5
 					color = #AC0CFF
                 }
