--- a/configs/Cili.cfg
+++ b/configs/Cili.cfg
@@ -37,21 +37,21 @@
                 Value
                 {
                     name = Lowland
-					displayName = Lowland
+					displayName = #LOC_CH_Cili_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #C8A200
                 }
 				Value
                 {
                     name = Midland
-					displayName = Midland
+					displayName = #LOC_CH_Cili_biomeDisplayName_Midlands
 					value = 1.0
 					color = #84C800
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Cili_biomeDisplayName_Highlands
 					value = 1.0
 					color = #00C896
                 }
