--- a/configs/Dasar.cfg
+++ b/configs/Dasar.cfg
@@ -37,35 +37,35 @@
                 Value
                 {
                     name = Lava lakes
-					displayName = Lava lakes
+					displayName = #LOC_CH_Dasar_biomeDisplayName_LavaLakes 
 					value = 2.0
 					color = #DD6D07
                 }
 				Value
                 {
                     name = Hot shores
-					displayName = Hot shores
+					displayName = #LOC_CH_Dasar_biomeDisplayName_HotShores
 					value = 1.0
 					color = #8D07DD
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Dasar_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #080892
                 }
 				Value
                 {
                     name = Flat plains
-					displayName = Flat plains
+					displayName = #LOC_CH_Dasar_biomeDisplayName_FlatPlains
 					value = 1.0
 					color = #299208
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Dasar_biomeDisplayName_Midlands
 					value = 1.4
 					color = #925608
                 }
