--- a/configs/Eespeyeria.cfg
+++ b/configs/Eespeyeria.cfg
@@ -38,56 +38,56 @@
                 Value
                 {
                     name = Hydrocarbon lakes
-					displayName = Hydrocarbon lakes
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_HydrocarbonLakes
 					value = 2.0
 					color = #0057C3
                 }
 				Value
                 {
                     name = Lowland
-					displayName = Lowland
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #001938
                 }
 				Value
                 {
                     name = Midland
-					displayName = Midland
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_Midlands
 					value = 1.0
 					color = #00F9C8
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_Highlands
 					value = 1.0
 					color = #77F900
                 }
 				Value
                 {
                     name = Nitrogen ice deposit
-					displayName = Nitrogen ice Deposit
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_NitrogenIceDeposits
 					value = 2.0
 					color = #266365
                 }
 				Value
                 {
                     name = Eerie peak
-					displayName = Eerie peak
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_EeriePeak
 					value = 2.5
 					color = #9248A7
                 }
 				Value
                 {
                     name = Eerie mons
-					displayName = Eerie mons
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_EerieMons
 					value = 2.0
 					color = #E5C3F0
                 }
 				Value
                 {
                     name = Ayas Top
-					displayName = Ayas Top
+					displayName = #LOC_CH_Eespeyeria_biomeDisplayName_AyasTop
 					value = 3.0
 					color = #F0DFC3
                 }
