--- a/configs/Gaia.cfg
+++ b/configs/Gaia.cfg
@@ -38,42 +38,42 @@
                 Value
                 {
                     name = Deep regions
-					displayName = Deep regions
+					displayName = #LOC_CH_Gaia_biomeDisplayName_DeepRegions
 					value = 1.0
 					color = #D000F9
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Gaia_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #8C6394
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Gaia_biomeDisplayName_Midlands
 					value = 1.0
 					color = #639471
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Gaia_biomeDisplayName_Highlands
 					value = 1.0
 					color = #919463
                 }
 				Value
                 {
                     name = Mountains
-					displayName = Mountains
+					displayName = #LOC_CH_Gaia_biomeDisplayName_Mountains
 					value = 1.4
 					color = #1A438D
                 }
 				Value
                 {
                     name = Mountain tops
-					displayName = Mountain tops
+					displayName = #LOC_CH_Gaia_biomeDisplayName_MountainTops
 					value = 1.4
 					color = #52C860
                 }
