--- a/configs/Kreak.cfg
+++ b/configs/Kreak.cfg
@@ -38,35 +38,35 @@
 				Value
                 {
                     name = Plains
-					displayName = Plains
+					displayName = #LOC_CH_Kreak_biomeDisplayName_Plains
 					value = 1.0
 					color = #088C92
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Kreak_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #390892
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Kreak_biomeDisplayName_Midlands
 					value = 1.0
 					color = #1D622B
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Kreak_biomeDisplayName_Highlands
 					value = 1.0
 					color = #BEA500
                 }
 				Value
                 {
                     name = Mountains
-					displayName = Mountains
+					displayName = #LOC_CH_Kreak_biomeDisplayName_Mountains
 					value = 1.0
 					color = #CC2020
                 }
