--- a/configs/Krob.cfg
+++ b/configs/Krob.cfg
@@ -36,56 +36,56 @@
                 Value
                 {
                     name = Eroded Valley 
-					displayName = Eroded Valley
+					displayName = #LOC_CH_Krob_biomeDisplayName_ErodedValley
 					value = 1.0
 					color = #5A9256
                 }
                 Value
                 {
                     name = Lowlands 
-					displayName = Lowlands
+					displayName = #LOC_CH_Krob_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #568D92
                 }
                 Value
                 {
                     name = Midlands 
-					displayName = Midlands
+					displayName = #LOC_CH_Krob_biomeDisplayName_Midlands
 					value = 1.0
 					color = #565A92
                 }
                 Value
                 {
                     name = Highlands 
-					displayName = Highlands
+					displayName = #LOC_CH_Krob_biomeDisplayName_Highlands
 					value = 1.0
 					color = #855692
                 }
                 Value
                 {
                     name = Mountains 
-					displayName = Mountains
+					displayName = #LOC_CH_Krob_biomeDisplayName_Mountains
 					value = 1.0
 					color = #972E2E
                 }
                 Value
                 {
                     name = Peaks 
-					displayName = Peaks
+					displayName = #LOC_CH_Krob_biomeDisplayName_Peaks
 					value = 1.0
 					color = #2E9731
                 }
                 Value
                 {
                     name = South
-					displayName = South
+					displayName = #LOC_CH_Krob_biomeDisplayName_South
 					value = 1.0
 					color = #CACACA
                 }
                 Value
                 {
                     name = North
-					displayName = North
+					displayName = #LOC_CH_Krob_biomeDisplayName_North
 					value = 1.0
 					color = #9A9191
                 }
