--- a/configs/Majesty.cfg
+++ b/configs/Majesty.cfg
@@ -38,42 +38,42 @@
                 Value
                 {
                     name = Fluvial valley
-					displayName = Fluvial valley
+					displayName = #LOC_CH_Majesty_biomeDisplayName_FluvialValley
 					value = 1.5
 					color = #671E80
                 }
 				Value
                 {
                     name = Plains
-					displayName = Plains
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Plains
 					value = 1.0
 					color = #2A317B
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #3FAA28
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Midlands
 					value = 1.0
 					color = #B71DEC
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Highlands
 					value = 1.0
 					color = #363A2B
                 }
 				Value
                 {
                     name = Mountains
-					displayName = Mountains
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Mountains
 					value = 1.3
 					color = #1F809C
                 }
