--- a/configs/Po.cfg
+++ b/configs/Po.cfg
@@ -38,42 +38,42 @@
                 Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Po_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #004B9D
                 }
 				Value
                 {
                     name = Young impact craters
-					displayName = Young impact craters
+					displayName = #LOC_CH_Po_biomeDisplayName_YoungImpactCraters
 					value = 1.5
 					color = #839D00
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Po_biomeDisplayName_Midlands
 					value = 1.0
 					color = #045A54
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Po_biomeDisplayName_Highlands
 					value = 1.0
 					color = #56563E
                 }
 				Value
                 {
                     name = Highest lands
-					displayName = Highest lands
+					displayName = #LOC_CH_Po_biomeDisplayName_HighestLands
 					value = 1.4
 					color = #B9004D
                 }
 				Value
                 {
                     name = Nitrogen depot
-					displayName = Nitrogen depot
+					displayName = #LOC_CH_Po_biomeDisplayName_NitrogenDepot
 					value = 1.4
 					color = #7A009D
                 }
