--- a/configs/Pobos.cfg
+++ b/configs/Pobos.cfg
@@ -37,21 +37,21 @@
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Pobos_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #C31C35
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Pobos_biomeDisplayName_Midlands
 					value = 1.0
 					color = #1C7267
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Pobos_biomeDisplayName_Highlands
 					value = 1.0
 					color = #893E83
                 }
