--- a/configs/Sanctar.cfg
+++ b/configs/Sanctar.cfg
@@ -39,70 +39,70 @@
                 Value
                 {
                     name = Waters
-					displayName = Ocean
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_Waters
 					value = 1.0
 					color = #0700FF
                 }
                 Value
                 {
                     name = North Pole
-					displayName = North Pole
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_NorthPole
 					value = 1.1
 					color = #FFFFFF
                 }
                 Value
                 {
                     name = South Pole
-					displayName = South Pole
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_SouthPole
 					value = 1.1
 					color = #C1FFFF
                 }
                 Value
                 {
                     name = Beaches
-					displayName = Beaches
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_Beaches 
 					value = 1.0
 					color = #FBFFA2
                 }
                 Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #1FD100
                 }
                 Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_Midlands
 					value = 1.0
 					color = #00B5B3
                 }
                 Value
                 {
                     name = Sanctuary Mons Peak
-					displayName = Sanctuary Mons Peak
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_SanctuaryMonsPeak
 					value = 2.5
 					color = #0500B5
                 }
                 Value
                 {
                     name = Desert
-					displayName = Desert
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_Desert
 					value = 1.0
 					color = #FFDD00
                 }
                 Value
                 {
                     name = Mountains
-					displayName = Mountains
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_Mountains
 					value = 1.0
 					color = #8E0B52
                 }
                 Value
                 {
                     name = Cold Ocean
-					displayName = Cold Ocean
+					displayName = #LOC_CH_Sanctar_biomeDisplayName_ColdOcean
 					value = 1.0
 					color = #6D7979
                 }
