--- a/configs/Trom.cfg
+++ b/configs/Trom.cfg
@@ -36,35 +36,35 @@
                 Value
                 {
                     name = The Crevice
-					displayName = The Crevice
+					displayName = #LOC_CH_Trom_biomeDisplayName_TheCrevice
 					value = 1.6
 					color = #C30000
                 }
 				Value
                 {
                     name = Lowland
-					displayName = Lowland
+					displayName = #LOC_CH_Trom_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #000CC3
                 }
 				Value
                 {
                     name = Midland
-					displayName = Midland
+					displayName = #LOC_CH_Trom_biomeDisplayName_Midlands
 					value = 1.0
 					color = #A300C3
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Trom_biomeDisplayName_Highlands
 					value = 1.0
 					color = #9DC300
                 }
 				Value
                 {
                     name = Toms mount
-					displayName = Toms mount
+					displayName = #LOC_CH_Trom_biomeDisplayName_TomsMount
 					value = 2.0
 					color = #00C306
                 }
