--- a/configs/Valheilheim.cfg
+++ b/configs/Valheilheim.cfg
@@ -38,56 +38,56 @@
 				Value
 				{
 					name = Apocalypse desert
-					displayName = Apocalypse desert
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_ApocalypseDesert
 					value = 1.0
 					color = #CB0000
 				}
 				Value
 				{
 					name = Dunes
-					displayName = Dunes
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Dunes
 					value = 1.0
 					color = #C6AB00
 				}
 				Value
 				{
 					name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #CB9100
 				}
 				Value
 				{
 					name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Midlands
 					value = 1.0
 					color = #0C00C6
 				}
 				Value
 				{
 					name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Highlands
 					value = 1.0
 					color = #00C65F
 				}
 				Value
 				{
 					name = Mountains
-					displayName = Mountains
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_Mountains
 					value = 1.0
 					color = #88C600
 				}
 				Value
 				{
 					name = Mount Celeste
-					displayName = Mount Celeste
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste
 					value = 2.5
 					color = #C60094
 				}
 				Value
 				{
 					name = Poles
-					displayName = Poles
+					displayName = #LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste
 					value = 1.5
 					color = #BDBDBD
 				}
