--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -12,7 +12,9 @@ Localization
 	// Defs for Aklarka:
 	#LOC_CH_Aklarka_displayName = Aklarka^N
 	#LOC_CH_Aklarka_description = Aklarka is between a rocky planet and a gas planet, covered in water and a dense hydrogen based atmosphere, it is believed to be the first identified Hycean planet. Its original discoverer thought it was a fly on the lens.
-
+	
+	#LOC_CH_Aklarka_biomeDisplayName_Aklarka = Aklarka
+	
 	#LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded1 = How did we get here? // Doesn't have a surface so this is illegal
 	#LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded2 = Proxima won't be too happy about this!
 	#LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed1 = Being a Hycean planet, Aklarka sure has some waves! I hope we don't tip over!
@@ -82,25 +84,57 @@ Localization
 	#LOC_CH_Alia_displayName = Alia^N
 	#LOC_CH_Alia_description = Alia, the secondary binary planet of the Sanctar-Alia system. A very bumpy yet beautiful crater covered world, perfect for a colonial expansion as it is almost as habitable as Sanctar.
 
+	#LOC_CH_Alia_biomeDisplayName_Ocean = Ocean
+	#LOC_CH_Alia_biomeDisplayName_NorthCap = North Cap
+	#LOC_CH_Alia_biomeDisplayName_SouthCap = South Cap
+	#LOC_CH_Alia_biomeDisplayName_Shores = Shores
+	#LOC_CH_Alia_biomeDisplayName_Grasslands = Grasslands
+	#LOC_CH_Alia_biomeDisplayName_Peaks = Peaks
+	#LOC_CH_Alia_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Alia_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Alia_biomeDisplayName_ColdOcean = Cold Ocean
+
 
 	// Defs for Beekos:
 	#LOC_CH_Beekos_displayName = Beekos^N
 	#LOC_CH_Beekos_description = Being the second innermost moon of Magnifica makes it a little bit more difficult to reach, its stretched out shape is most likely due to its rotation speed and collecting material from Magnificas rings.
 		
+	#LOC_CH_Beekos_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Beekos_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Beekos_biomeDisplayName_Highlands = Highlands
+
 
 	// Defs for Booopus:
 	#LOC_CH_Booopus_displayName = Booopus^N
 	#LOC_CH_Booopus_description = The discovery of Booopus caused a wave of melancholy in the Kerbal society, its appearance ressembles the Mun, the former moon of the original home of the kerbals, they miss their home.
 		
+	#LOC_CH_Booopus_biomeDisplayName_MareInferni = Mare Inferni
+	#LOC_CH_Booopus_biomeDisplayName_SmallPlain = Small Plains
+	#LOC_CH_Booopus_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Booopus_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Booopus_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Booopus_biomeDisplayName_BobCrater = Bob Crater
+
 
 	// Defs for Cili:
 	#LOC_CH_Cili_displayName = Cili^N
 	#LOC_CH_Cili_description = Cili is an asteroid captured by Sanctar-Alia, its size is very concerning as it could easily make one of the two worlds unhabitable if perturbed, keeping an eye on it is the best thing to do.
-		
+
+	#LOC_CH_Cili_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Cili_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Cili_biomeDisplayName_Highlands = Highlands
+	
 
 	// Defs for Dasar:
 	#LOC_CH_Dasar_displayName = Dasar^N
 	#LOC_CH_Dasar_description = Dasar is the closet planet to Harmonia, so close that some pools of lava has formed, creating sharp edges and flat plains. The lack of craters shows an extremely young surface. It has orgininally been confused by a very dim brown dwarf due to emmiting a considerable amount of light.
+
+	#LOC_CH_Dasar_biomeDisplayName_LavaLakes = Lava Lakes
+	#LOC_CH_Dasar_biomeDisplayName_HotShores = Hot Shores
+	#LOC_CH_Dasar_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Dasar_biomeDisplayName_FlatPlains = Flat Plains
+	#LOC_CH_Dasar_biomeDisplayName_Midlands = Midlands
+
 
 	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore1 = There is quite a lot of perilous terrain all about us, excluding the glowing lakes of molten rock within walking distance. You think this is as close as you should get to them.
 	#LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore2 = Setting up in such a location is certainly a daring idea. Best to make sure no equipment rolls into the lava below!	
@@ -120,8 +154,8 @@ Localization
 	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Lowlands2 = In the distance, you notice a large boulder getting shook loose by the tectonic activity of the planet. It rolls closer to the lava lakes for a short while before getting stuck again in the temporary safety of the jagged terrain. You breathe a quick sigh of relief and return to the mission.
 	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Midlands1 = A thick layer of dusty ash and loose sediment appears to cover this part of the ground. The craft might be able to land here but it may be risky.
 	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Midlands2 = The terrain appears mostly flat, but the occasional cliff or mountain appears out of nowhere to disturb this theme.
-	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Flatplains1 = Patches of smooth, brown basalt rock finally interrupt the jagged cliffs and layers of loose sediment. They're probably the best place to land.
-	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_Flatplains2 = From here, the terrain appears to be as calm as it's going to get. It's saddening that the safest place to land will likely avoid the beautiful view of the lava oceans.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_FlatPlains1 = Patches of smooth, brown basalt rock finally interrupt the jagged cliffs and layers of loose sediment. They're probably the best place to land.
+	#LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow_FlatPlains2 = From here, the terrain appears to be as calm as it's going to get. It's saddening that the safest place to land will likely avoid the beautiful view of the lava oceans.
 
 	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore1 = The goo seems to be a little unconfortable in this sweltering environment. Then again, the crew is quite uncomfortable as well.
 	#LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore2 = The heat is getting unbearable for the goo. We should probably get out of here quickly!
@@ -146,14 +180,53 @@ Localization
 	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh1 = The goo peers out at Dasar. I think it might enjoy the warmth down there.
 	#LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh2 = The canister is being slightly warmed by the heat radiating off from Dasar. The goo definitely enjoys the warmth! We might fit small heaters in the next revision of the canister for those long trips. 
 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_HotShore1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_HotShore2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_Lowlands1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_Lowlands2 =
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_Flatplains1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_Flatplains2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_Midlands1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfLanded_Midlands2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfSplashed1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_srfSplashed2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_LavaLakes1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_LavaLakes2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_HotShore1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_HotShore2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_Lowlands1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_Lowlands2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_Midlands1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_Midlands2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_FlatPlains1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceLow_FlatPlains2 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceHigh1 = 
+	#LOC_CH_Dasar_ScienceDef_temperature_inSpaceHigh2 = 
+
 	// Defs for Eespeyeria:
 	#LOC_CH_Eespeyeria_displayName = Eespeyeria^N
 	#LOC_CH_Eespeyeria_description = Eespeyeria has a very dense atmopshere for a moon of this mass. Readings show a very eroded landscape with lakes of hydrocarbons.
+
+	#LOC_CH_Eespeyeria_biomeDisplayName_HydrocarbonLakes = Hydrocarbon Lakes
+	#LOC_CH_Eespeyeria_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Eespeyeria_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Eespeyeria_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Eespeyeria_biomeDisplayName_NitrogenIceDeposits = Nitrogen Ice Deposits
+	#LOC_CH_Eespeyeria_biomeDisplayName_EeriePeak = Eerie Peak
+	#LOC_CH_Eespeyeria_biomeDisplayName_EerieMons = Eerie Mons
+	#LOC_CH_Eespeyeria_biomeDisplayName_AyasTop = Ayas Top
 
 		
 	// Defs for Gaia:
 	#LOC_CH_Gaia_displayName = Gaia^N
 	#LOC_CH_Gaia_description = Being the outermost body in the Harmonia system, Gaia is famous for its unique properties, a dense enough atomsphere for aerobreaking, an icy composition (perfect for ice cream) and a ressourceful companion, Po.
+
+	#LOC_CH_Gaia_biomeDisplayName_DeepRegions = Deep Regions
+	#LOC_CH_Gaia_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Gaia_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Gaia_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Gaia_biomeDisplayName_Mountains = Mountains
+	#LOC_CH_Gaia_biomeDisplayName_MountainTops = Mountain Tops
 
 		
 	// Defs for Harmonia:
@@ -165,12 +238,27 @@ Localization
 	#LOC_CH_Kreak_displayName = Kreak^N
 	#LOC_CH_Kreak_description = Kreak is an icy moon, so icy that most of its surface is covered in ice, except for some mountains raising above the ice levels. Probably also tastes delicious.
 
+	#LOC_CH_Kreak_biomeDisplayName_Plains = Plains
+	#LOC_CH_Kreak_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Kreak_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Kreak_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Kreak_biomeDisplayName_Mountains = Mountains
+
 		
 	// Defs for Krob:
 	#LOC_CH_Krob_displayName = Krob^N
 	#LOC_CH_Krob_description = Only true moon of the Sanctar-Alia system, the coloration was originally thought to be ice cream, unfortunately its close proximity to Harmonia makes it impossible.
 
-		
+	#LOC_CH_Krob_biomeDisplayName_ErodedValley = Eroded Valleys
+	#LOC_CH_Krob_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Krob_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Krob_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Krob_biomeDisplayName_Mountains = Mountains
+	#LOC_CH_Krob_biomeDisplayName_Peaks = Peaks
+	#LOC_CH_Krob_biomeDisplayName_South = South
+	#LOC_CH_Krob_biomeDisplayName_North = North
+
+			
 	// Defs for Magnifica:
 	#LOC_CH_Magnifica_displayName = Magnifica^N
 	#LOC_CH_Magnifica_description = The sole gas giant in the Harmonia system, it was named Magnifica due to the discoverer being completely baffled by the grape candy in the sky.
@@ -180,28 +268,83 @@ Localization
 	#LOC_CH_Majesty_displayName = Majesty^N
 	#LOC_CH_Majesty_description = Majesty is the only moon of Aklarka. The nature of its parent planet makes Majesty a nice pit stop for whoever tries to go and return from Aklarkas surface. Majesty agglomerate some material in the rings, creating a gap. Jumping from the giant cliff looks very fun !
 
-		
+	#LOC_CH_Majesty_biomeDisplayName_FluvialValley = Fluvial Valley
+	#LOC_CH_Majesty_biomeDisplayName_Plains = Plains
+	#LOC_CH_Majesty_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Majesty_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Majesty_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Majesty_biomeDisplayName_Mountains = Mountains
+
+				
 	// Defs for Po:
 	#LOC_CH_Po_displayName = Po^N
 	#LOC_CH_Po_description = Po is the sole companion of Gaia, together alone at the edge of the system. This time it actually might have ice cream on it!
+
+	#LOC_CH_Po_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Po_biomeDisplayName_YoungImpactCraters = Young Impact Craters
+	#LOC_CH_Po_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Po_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Po_biomeDisplayName_HighestLands = Highest Lands
+	#LOC_CH_Po_biomeDisplayName_NitrogenDepot = Nitrogen Depot
 
 		
 	// Defs for Pobos:
 	#LOC_CH_Pobos_displayName = Pobos^N
 	#LOC_CH_Pobos_description = Pobos is the innermost moon of Magnifica, it is very small and theorized to be a clump of ring material or being the remnant of an old broken moon that made the rings. Some says that it ressembles a primate skull.
 		
+	#LOC_CH_Pobos_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Pobos_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Pobos_biomeDisplayName_Highlands = Highlands
+
+
 	// Defs for Sanctar
 	#LOC_CH_Sanctar_displayName = Sanctar^N
 	#LOC_CH_Sanctar_description = Sanctar is a very welcoming world, falling upon it is extremely luck as it is apart of a binary system. Its sister, Alia, has very similar properties. Those qualities made Sanctar the number one candidate for kerbal immigration after they lost their home due to unfortunate events.
 
-		
+	#LOC_CH_Sanctar_biomeDisplayName_Waters = Ocean
+	#LOC_CH_Sanctar_biomeDisplayName_NorthPole = NorthPole
+	#LOC_CH_Sanctar_biomeDisplayName_SouthPole = SouthPole
+	#LOC_CH_Sanctar_biomeDisplayName_Beaches = Beaches
+	#LOC_CH_Sanctar_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Sanctar_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Sanctar_biomeDisplayName_SanctuaryMonsPeak = Sanctuary Mons Peak
+	#LOC_CH_Sanctar_biomeDisplayName_Desert = Desert
+	#LOC_CH_Sanctar_biomeDisplayName_Mountains = Mountains
+	#LOC_CH_Sanctar_biomeDisplayName_ColdOcean = Cold Ocean
+	
+
 	// Defs for Trom
 	#LOC_CH_Trom_displayName = Trom^N
 	#LOC_CH_Trom_description = Trom is an egg shaped ringed dwarf planet, its original discovery made the scientists quite hungry for an omelette. Some believe it to be a Kraken egg. Kraken egg or not, Trom is an interesting destination.
 
+	#LOC_CH_Trom_biomeDisplayName_TheCrevice = The Crevice
+	#LOC_CH_Trom_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Trom_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Trom_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Trom_biomeDisplayName_TomsMount = Toms Mount
+
+
 	// Defs for Vallheilheim
 	#LOC_CH_Vallheilheim_displayName = Vallheilheim^N
 	#LOC_CH_Vallheilheim_description = Valheilheim is the desert planet of the Harmonia system. This planet has very small rings and a huge plain, most probably due to a *recent* cataclysmic event, such as a collision. This place would be great to shoot some movies !
+
+	#LOC_CH_Vallheilheim_biomeDisplayName_ApocalypseDesert = Apocalypse Desert
+	#LOC_CH_Vallheilheim_biomeDisplayName_Dunes = Dunes
+	#LOC_CH_Vallheilheim_biomeDisplayName_Lowlands = Lowlands
+	#LOC_CH_Vallheilheim_biomeDisplayName_Midlands = Midlands
+	#LOC_CH_Vallheilheim_biomeDisplayName_Highlands = Highlands
+	#LOC_CH_Vallheilheim_biomeDisplayName_Mountains = Mountains
+	#LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste = Mount Celeste
+	#LOC_CH_Vallheilheim_biomeDisplayName_MountCeleste = Poles
+
+
+	// Misc defs
+	#LOC_CH_tip1 = Landing in lava...
+	#LOC_CH_tip2 = Getting surface samples from Aklarka...
+	#LOC_CH_tip3 = Misspelling spaceflight...
+	#LOC_CH_tip4 = Sending rovers to Eespeyeria...
+	#LOC_CH_tip5 = Docking without permission...
+	#LOC_CH_tip6 = Pushing out of orbit...
 
 	}
 
