--- a/configs/Majesty.cfg
+++ b/configs/Majesty.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = #LOC_CH_Majesty_displayName
-            description = #LOC_CH_Majesty_description
+            displayName = Majesty^N
+            description = Majesty is the only moon of Aklarka. The nature of its parent planet makes Majesty a nice pit stop for whoever tries to go and return from Aklarkas surface. Majesty agglomerate some material in the rings, creating a gap. Jumping from the giant cliff looks very fun !
             radius = 125000
             geeASL = 0.2
             rotates = True
@@ -38,47 +38,46 @@
                 Value
                 {
                     name = Fluvial valley
-					displayName = #LOC_CH_Majesty_biomeDisplayName_FluvialValley
+					displayName = Fluvial valley
 					value = 1.5
 					color = #671E80
                 }
 				Value
                 {
                     name = Plains
-					displayName = #LOC_CH_Majesty_biomeDisplayName_Plains
+					displayName = Plains
 					value = 1.0
 					color = #2A317B
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = #LOC_CH_Majesty_biomeDisplayName_Lowlands
+					displayName = Lowlands
 					value = 1.0
 					color = #3FAA28
                 }
 				Value
                 {
                     name = Midlands
-					displayName = #LOC_CH_Majesty_biomeDisplayName_Midlands
+					displayName = Midlands
 					value = 1.0
 					color = #B71DEC
                 }
 				Value
                 {
                     name = Highlands
-					displayName = #LOC_CH_Majesty_biomeDisplayName_Highlands
+					displayName = Highlands
 					value = 1.0
 					color = #363A2B
                 }
 				Value
                 {
                     name = Mountains
-					displayName = #LOC_CH_Majesty_biomeDisplayName_Mountains
+					displayName = Mountains
 					value = 1.3
 					color = #1F809C
                 }
             }
-        }
         }
         Orbit
         {
@@ -91,7 +90,7 @@
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.2
             epoch = 0
-			period = 84554.1283
+			period = 7000
             iconTexture = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/Decals/Moon.png
         }
         ScaledVersion
@@ -341,13 +340,10 @@
 								startEnd = -1
 								startStart = -1
 							}
-							scatters
-							{
-							}
 						}
 					}
 				}
-            }
+			}
         }
     }
-}
+ }
