--- a/configs/Majesty.cfg
+++ b/configs/Majesty.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Majesty^N
-            description = Majesty is the only moon of Aklarka. The nature of its parent planet makes Majesty a nice pit stop for whoever tries to go and return from Aklarkas surface. Majesty agglomerate some material in the rings, creating a gap. Jumping from the giant cliff looks very fun !
+            displayName = #LOC_CH_Majesty_displayName
+            description = #LOC_CH_Majesty_description
             radius = 125000
             geeASL = 0.2
             rotates = True
@@ -38,46 +38,47 @@
                 Value
                 {
                     name = Fluvial valley
-					displayName = Fluvial valley
+					displayName = #LOC_CH_Majesty_biomeDisplayName_FluvialValley
 					value = 1.5
 					color = #671E80
                 }
 				Value
                 {
                     name = Plains
-					displayName = Plains
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Plains
 					value = 1.0
 					color = #2A317B
                 }
 				Value
                 {
                     name = Lowlands
-					displayName = Lowlands
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Lowlands
 					value = 1.0
 					color = #3FAA28
                 }
 				Value
                 {
                     name = Midlands
-					displayName = Midlands
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Midlands
 					value = 1.0
 					color = #B71DEC
                 }
 				Value
                 {
                     name = Highlands
-					displayName = Highlands
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Highlands
 					value = 1.0
 					color = #363A2B
                 }
 				Value
                 {
                     name = Mountains
-					displayName = Mountains
+					displayName = #LOC_CH_Majesty_biomeDisplayName_Mountains
 					value = 1.3
 					color = #1F809C
                 }
             }
+        }
         }
         Orbit
         {
@@ -90,7 +91,7 @@
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.2
             epoch = 0
-			period = 7000
+			period = 84554.1283
             iconTexture = CelestialHarmony/_Systems/Harmonia/Textures/PluginData/Decals/Moon.png
         }
         ScaledVersion
@@ -340,10 +341,13 @@
 								startEnd = -1
 								startStart = -1
 							}
+							scatters
+							{
+							}
 						}
 					}
 				}
-			}
+            }
         }
     }
- }
+}
